<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="rdView3VM" type="com.utkarshsapplication.app.modules.rdview3.data.viewmodel.RdView3VM"/>
    </data>
    <LinearLayout android:id="@+id/linear3rdview3"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical" style="@style/groupStylegray_300">
        <androidx.appcompat.widget.Toolbar
            android:gravity="center_horizontal"
            android:id="@+id/toolbarToolbar"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_23pxh"
            android:layout_marginStart="@dimen/_23pxh"
            android:layout_marginTop="@dimen/_34pxv"
            android:layout_width="match_parent" app:contentInsetStart="0dp">
            <LinearLayout android:id="@+id/linearRowarrowone"
                android:layout_height="wrap_content"
                android:layout_width="match_parent" android:orientation="horizontal">
                <ImageView android:id="@+id/imageArrowOne"
                    android:layout_height="@dimen/_2pxh"
                    android:layout_marginBottom="@dimen/_7pxv"
                    android:layout_marginTop="@dimen/_12pxv"
                    android:layout_width="@dimen/_25pxh"
                    android:scaleType="fitXY"
                    android:src="@drawable/img_arrow1_black_900"
                    tools:ignore="ContentDescription" tools:src="@drawable/img_arrow1_black_900"/>
                <TextView android:ellipsize="end"
                    android:id="@+id/txtSignup"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_218pxh"
                    android:layout_weight="0.72"
                    android:layout_width="0dp" android:singleLine="true"
                    android:text="@{rdView3VM.rdView3Model.txtSignup}"
                    style="@style/txtIntermedium18" tools:text="@string/lbl_sign_up2"/>
            </LinearLayout>
        </androidx.appcompat.widget.Toolbar>
        <TextView android:ellipsize="end"
            android:id="@+id/txtWelcomeback"
            android:layout_gravity="start"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_48pxh"
            android:layout_marginStart="@dimen/_48pxh"
            android:layout_marginTop="@dimen/_21pxv"
            android:layout_width="wrap_content"
            android:singleLine="true"
            android:text="@{rdView3VM.rdView3Model.txtWelcomeback}"
            style="@style/txtInterbold25" tools:text="@string/lbl_welcome_back"/>
        <TextView android:ellipsize="end"
            android:id="@+id/txtLogbackintoy"
            android:layout_gravity="start"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_48pxh"
            android:layout_marginStart="@dimen/_48pxh"
            android:layout_marginTop="@dimen/_13pxv"
            android:layout_width="wrap_content"
            android:singleLine="true"
            android:text="@{rdView3VM.rdView3Model.txtLogbackintoy}"
            style="@style/txtInterextralight14" tools:text="@string/msg_log_back_into_y"/>
        <TextView android:ellipsize="end" android:id="@+id/txtEmail"
            android:layout_gravity="start"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_48pxh"
            android:layout_marginStart="@dimen/_48pxh"
            android:layout_marginTop="@dimen/_31pxv"
            android:layout_width="wrap_content"
            android:singleLine="true"
            android:text="@{rdView3VM.rdView3Model.txtEmail}"
            style="@style/txtInterextralight14" tools:text="@string/lbl_email"/>
        <EditText android:ellipsize="end"
            android:hint="@string/msg_akankshagarg301"
            android:id="@+id/etEmailOne"
            android:inputType="textEmailAddress"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_23pxh"
            android:layout_marginStart="@dimen/_23pxh"
            android:layout_marginTop="@dimen/_12pxv"
            android:layout_width="match_parent"
            android:paddingBottom="@dimen/_7pxv"
            android:paddingEnd="@dimen/_30pxh" android:singleLine="true"
            android:text="@={rdView3VM.rdView3Model.etEmailOneValue}"
            android:textColorHint="@color/black_900"
            style="@style/etInterregular14" tools:ignore="Autofill"/>
        <TextView android:ellipsize="end" android:id="@+id/txtPassword"
            android:layout_gravity="start"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_48pxh"
            android:layout_marginStart="@dimen/_48pxh"
            android:layout_marginTop="@dimen/_20pxv"
            android:layout_width="wrap_content"
            android:singleLine="true"
            android:text="@{rdView3VM.rdView3Model.txtPassword}"
            style="@style/txtInterextralight14" tools:text="@string/lbl_password"/>
        <FrameLayout android:id="@+id/frameStackpasswordOne"
            android:layout_gravity="center_horizontal"
            android:layout_height="@dimen/_27pxv"
            android:layout_marginEnd="@dimen/_23pxh"
            android:layout_marginStart="@dimen/_23pxh"
            android:layout_marginTop="@dimen/_13pxv" android:layout_width="@dimen/_277pxh">
            <EditText android:ellipsize="end" android:hint="@string/lbl"
                android:id="@+id/etPasswordOne"
                android:inputType="textPassword"
                android:layout_gravity="start"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:paddingBottom="@dimen/_10pxv"
                android:paddingEnd="@dimen/_30pxh"
                android:singleLine="true"
                android:text="@={rdView3VM.rdView3Model.etPasswordOneValue}"
                android:textColorHint="@color/black_900"
                style="@style/etInterregular14" tools:ignore="Autofill"/>
            <ImageView android:id="@+id/imagePasswordOne"
                android:layout_gravity="top|end"
                android:layout_height="@dimen/_16pxh"
                android:layout_marginBottom="@dimen/_10pxv"
                android:layout_marginEnd="@dimen/_5pxh"
                android:layout_marginStart="@dimen/_10pxh"
                android:layout_marginTop="@dimen/_1pxv"
                android:layout_width="@dimen/_22pxh"
                android:scaleType="fitXY"
                android:src="@drawable/img_password1"
                tools:ignore="ContentDescription" tools:src="@drawable/img_password1"/>
        </FrameLayout>
        <TextView android:ellipsize="end"
            android:id="@+id/txtForgotPassword"
            android:layout_gravity="end"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_30pxh"
            android:layout_marginStart="@dimen/_30pxh"
            android:layout_marginTop="@dimen/_9pxv"
            android:layout_width="wrap_content"
            android:singleLine="true"
            android:text="@{rdView3VM.rdView3Model.txtForgotPassword}"
            style="@style/txtInterextralight14" tools:text="@string/msg_forgot_password"/>
        <androidx.appcompat.widget.AppCompatButton
            android:ellipsize="end" android:gravity="center"
            android:id="@+id/btnContinue"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_23pxh"
            android:layout_marginStart="@dimen/_23pxh"
            android:layout_marginTop="@dimen/_20pxv"
            android:layout_width="match_parent"
            android:paddingBottom="@dimen/_5pxv"
            android:paddingEnd="@dimen/_30pxh"
            android:paddingStart="@dimen/_30pxh"
            android:paddingTop="@dimen/_5pxv" android:singleLine="true"
            android:text="@string/lbl_continue"
            android:textAllCaps="false" style="@style/btnSolidRounded_1" tools:text="@string/lbl_continue"/>
        <ImageView android:gravity="start"
            android:id="@+id/imageKeyboardOne"
            android:layout_height="@dimen/_209pxv"
            android:layout_marginTop="@dimen/_51pxv"
            android:layout_width="match_parent"
            android:scaleType="fitXY"
            imageRes="@{@drawable/img_keyboard1}"
            tools:ignore="ContentDescription" tools:src="@drawable/img_keyboard1"/>
    </LinearLayout>
</layout>
