<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="rdView3OneVM" type="com.utkarshsapplication.app.modules.rdview3one.data.viewmodel.RdView3OneVM"/>
    </data>
    <LinearLayout android:id="@+id/linear3rdview3"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical" style="@style/groupStylegray_300">
        <androidx.appcompat.widget.Toolbar
            android:gravity="center_horizontal"
            android:id="@+id/toolbarToolbar"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_23pxh"
            android:layout_marginStart="@dimen/_23pxh"
            android:layout_marginTop="@dimen/_34pxv"
            android:layout_width="match_parent" app:contentInsetStart="0dp">
            <LinearLayout android:id="@+id/linearRowarrowone"
                android:layout_height="wrap_content"
                android:layout_width="match_parent" android:orientation="horizontal">
                <ImageView android:id="@+id/imageArrowOne"
                    android:layout_height="@dimen/_2pxh"
                    android:layout_marginBottom="@dimen/_7pxv"
                    android:layout_marginTop="@dimen/_12pxv"
                    android:layout_width="@dimen/_25pxh"
                    android:scaleType="fitXY"
                    android:src="@drawable/img_arrow1_black_900"
                    tools:ignore="ContentDescription" tools:src="@drawable/img_arrow1_black_900"/>
                <TextView android:ellipsize="end"
                    android:id="@+id/txtSignup"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_218pxh"
                    android:layout_weight="0.72"
                    android:layout_width="0dp" android:singleLine="true"
                    android:text="@{rdView3OneVM.rdView3OneModel.txtSignup}"
                    style="@style/txtIntermedium18" tools:text="@string/lbl_sign_up2"/>
            </LinearLayout>
        </androidx.appcompat.widget.Toolbar>

        <TextView
            android:id="@+id/txtWelcomeback"
            style="@style/txtInterbold25"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginStart="@dimen/_48pxh"
            android:layout_marginTop="@dimen/_21pxv"
            android:layout_marginEnd="@dimen/_48pxh"
            android:ellipsize="end"
            android:singleLine="true"
            android:text="@{rdView3OneVM.rdView3OneModel.txtWelcomeback}"
            tools:text="@string/lbl_welcome_back" />

        <TextView android:ellipsize="end"
            android:id="@+id/txtLogbackintoy"
            android:layout_gravity="start"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_48pxh"
            android:layout_marginStart="@dimen/_48pxh"
            android:layout_marginTop="@dimen/_13pxv"
            android:layout_width="wrap_content"
            android:singleLine="true"
            android:text="@{rdView3OneVM.rdView3OneModel.txtLogbackintoy}"
            style="@style/txtInterextralight14" tools:text="@string/msg_log_back_into_y"/>

        <EditText
            android:id="@+id/etEmailOne"
            style="@style/etInterregular14"
            android:background="@drawable/background_backchodi"
            android:layout_width="356dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_23pxh"
            android:layout_marginTop="@dimen/_12pxv"
            android:layout_marginEnd="@dimen/_23pxh"
            android:padding="8dp"
            android:ellipsize="end"
            android:hint="Email"
            android:textSize="18dp"
            android:inputType="textEmailAddress"
            android:singleLine="true"

            android:textColorHint="@color/black_900"
            tools:ignore="Autofill" />

        <EditText
            android:id="@+id/etPasswordOne"
            style="@style/etInterregular14"
            android:background="@drawable/background_backchodi"
            android:layout_width="356dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textSize="18dp"
            android:layout_marginTop="10dp"
            android:ellipsize="end"
            android:hint="@string/lbl"
            android:inputType="textPassword"
            android:padding="8dp"
            android:singleLine="true"

            android:textColorHint="@color/black_900"
            tools:ignore="Autofill" />

        <TextView android:ellipsize="end"
            android:id="@+id/txtForgotPassword"
            android:layout_gravity="end"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_30pxh"
            android:layout_marginStart="@dimen/_30pxh"
            android:layout_marginTop="@dimen/_9pxv"
            android:layout_width="wrap_content"
            android:singleLine="true"
            android:text="@string/msg_forgot_password"
            style="@style/txtInterextralight14" tools:text="@string/msg_forgot_password"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnContinue"
            style="@style/btnSolidRounded_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_23pxh"
            android:layout_marginTop="@dimen/_20pxv"
            android:layout_marginEnd="@dimen/_23pxh"
            android:ellipsize="end"
            android:gravity="center"
            android:paddingStart="@dimen/_30pxh"
            android:paddingTop="@dimen/_5pxv"
            android:paddingEnd="@dimen/_30pxh"
            android:paddingBottom="@dimen/_5pxv"
            android:singleLine="true"
            android:text="@string/lbl_continue"
            android:textAllCaps="false"
            tools:text="@string/lbl_continue" />
    </LinearLayout>
</layout>
