<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="listuserRowModel" type="com.utkarshsapplication.app.modules.thview5.data.model.ListuserRowModel"/>
    </data>
    <LinearLayout android:id="@+id/linearRowuser"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="horizontal" style="@style/groupStylelime_700_3d">
        <ImageView android:id="@+id/imageUser"
            android:layout_height="@dimen/_16pxh"
            android:layout_marginBottom="@dimen/_8pxv"
            android:layout_marginStart="@dimen/_7pxh"
            android:layout_marginTop="@dimen/_8pxv"
            android:layout_width="@dimen/_16pxh"
            android:scaleType="fitXY"
            android:src="@drawable/img_user_black_900"
            tools:ignore="ContentDescription" tools:src="@drawable/img_user_black_900"/>
        <TextView android:ellipsize="end"
            android:id="@+id/txtRameshKumar"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_5pxv"
            android:layout_marginStart="@dimen/_27pxh"
            android:layout_marginTop="@dimen/_6pxv"
            android:layout_weight="0.49" android:layout_width="0dp"
            android:singleLine="true"
            android:text="@{listuserRowModel.txtRameshKumar}"
            style="@style/txtInterregular16" tools:text="@string/lbl_ramesh_kumar"/>
        <TextView android:ellipsize="end" android:id="@+id/txtRs60L"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_7pxv"
            android:layout_marginStart="@dimen/_18pxh"
            android:layout_marginTop="@dimen/_7pxv"
            android:layout_weight="0.22" android:layout_width="0dp"
            android:singleLine="true"
            android:text="@{listuserRowModel.txtRs60L}"
            style="@style/txtInterregular14_1" tools:text="@string/lbl_rs_60_l"/>
        <ImageView android:id="@+id/imageSettings"
            android:layout_height="@dimen/_18pxh"
            android:layout_marginBottom="@dimen/_10pxv"
            android:layout_marginStart="@dimen/_15pxh"
            android:layout_marginTop="@dimen/_4pxv"
            android:layout_width="@dimen/_18pxh"
            android:scaleType="fitXY"
            android:src="@drawable/img_settings"
            tools:ignore="ContentDescription" tools:src="@drawable/img_settings"/>
        <TextView android:ellipsize="end" android:id="@+id/txtDistance"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_1pxv"
            android:layout_marginEnd="@dimen/_4pxh"
            android:layout_marginTop="@dimen/_13pxv"
            android:layout_weight="0.14" android:layout_width="0dp"
            android:singleLine="true"
            android:text="@{listuserRowModel.txtDistance}"
            style="@style/txtIntermedium14" tools:text="@string/lbl_2_km"/>
    </LinearLayout>
</layout>
